# modules_cuda

./: FindCUBLAS.cmake  README.md
find_cublas/: FindCUBLAS.cmake
find_cudnn/: FindCUDNN.cmake
sample/: CMakeLists.txt  common.h  hello.cu  run.sh  sumArraysOnGPU-timer.cu
upstream/: FindCUDA.cmake
upstream/FindCUDA/: run_nvcc.cmake  select_compute_arch.cmake
